@@ -1,3 +1,8 @@
+2004-03-28  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* tui/tui-regs.c (tui_show_registers): Make sure the TUI is active
+	and switch the layout to force a display of register window.
+
 2004-03-26  David Carlton  <carlton@kealia.com>
 
 	* PROBLEMS: Refer to gdb/1588 instead of gdb/826.
